--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="page landing-page">
           <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/bg02.jpg&quot;);color: rgba(0,0,0,0.76);width: 100%;margin-top: -1%;">
              <div class="text" style="margin: 0px;margin-top: 0%;"><img data-aos="fade-up" data-aos-duration="1000" src="assets/img/fsae-logo-white.svg" style="width: 154px;">
-                 <h2 data-aos="fade-up" data-aos-duration="1000" style="font-family: 'Fjalla One', sans-serif;margin-top: 7px;">Columbia University Formula Racing</h2><button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" onclick="window.location.href = 'https://forms.gle/NNNhkBxCukYZ5zoz7';" data-aos-delay="1000" type="button"><a class="text-white" href="https://forms.gle/NNNhkBxCukYZ5zoz7" style="color: rgba(255,255,255,0.8);opacity: 1;">Join us</a></button>
+                 <h2 data-aos="fade-up" data-aos-duration="1000" style="font-family: 'Fjalla One', sans-serif;margin-top: 7px;">Columbia University Formula Racing</h2><button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" onclick="window.location.href = 'https://forms.gle/NNNhkBxCukYZ5zoz7';" data-aos-delay="1000" type="button"><a class="text-white" href="https://forms.gle/QttwUKwaZpTaEPkp7" style="color: rgba(255,255,255,0.8);opacity: 1;">Join us</a></button>
               </div>
              
                   </section>
@@ -76,13 +76,13 @@
         <section class="text-primary clean-block slider dark"></section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
-                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://twitter.com/ColumbiaFSAE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="margin: 0px 5px;">
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" target="_blank" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
+                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" target="_blank" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://twitter.com/ColumbiaFSAE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" style="margin: 0px 5px;">
         <i class="fa fa-twitter social-link-icon"></i></a>
         </a></div>
     
         <div class="footer-copyright">
-            <p>© 2019 Copyright Columbia University FSAE</p>
+            <p>© 2020 Copyright Columbia University FSAE</p>
         </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
