--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="container">
+                    <div data-aos="fade" data-aos-duration="1200" class="block-heading" style="margin-bottom: 84px;padding-bottom: 20px;">
+                        <h2 class="text-dark" style="margin-top: 5%;">Upcoming Events!</h2>
+                        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=Y29sdW1iaWFmc2FlQGdtYWlsLmNvbQ&amp;color=%234285F4&amp;showNav=1&amp;showDate=1&amp;showTabs=1&amp;showCalendars=1&amp;showTz=1&amp;title=Columbia%20University%20Formula%20Racing" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="text-primary clean-block slider dark"></section>
