--- a/about-us/index.html
+++ b/about-us/index.html
@@ -261,7 +261,7 @@
                </div>
            </div>
            
-            <div class="container">
+            <div class="container" style="width:600px; height:auto;">
                 <div data-aos="fade">
                             <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Current Member Roster</h2>
                     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfdBcjaD-6dF-XTtnorcXHPdviMZbxPhN10yc0971p2Y6pm7-bx3GmuSlMO429x89imlWN2PX7Sze4/pubhtml?gid=1835805954&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
