--- a/about-us/index.html
+++ b/about-us/index.html
@@ -261,11 +261,14 @@
                </div>
            </div>
            
-            <div class="container">
-                <div data-aos="fade" style="width:600px;">
+            <div class="container" style="width:100%;">
+                <div data-aos="fade" style="width:100%;">
+                    <div style="vertical-align:middle; width:600px;">
                             <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">Current Member Roster</h2>
                     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSfdBcjaD-6dF-XTtnorcXHPdviMZbxPhN10yc0971p2Y6pm7-bx3GmuSlMO429x89imlWN2PX7Sze4/pubhtml?gid=1835805954&amp;single=true&amp;widget=false&amp;headers=false"></iframe>
-                </div>
+                    </div>
+                    
+               </div>
             </div>                
             <div class="container">
                 <div data-aos="fade">
