--- a/about-us/index.html
+++ b/about-us/index.html
@@ -179,6 +179,14 @@
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
+                                <h4 class="card-title">Calee Schmidtberger</h4>
+                                <p class="card-text">Assistant Chief of Controls</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                            <div class="card-body info">
                                 <h4 class="card-title">Nader Babar</h4>
                                 <p class="card-text">Assistant Chief, High Voltage</p>
                             </div>
