--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<style>
+   .row-header-wrapper {
+    display:none;
+} 
+</style>
+    
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
