--- a/about-us/index.html
+++ b/about-us/index.html
@@ -39,6 +39,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/" style="color: #e1e1e1;" >JOIN</a></li>
