Update the cars for 2020-2021.

--- a/cars/index.html
+++ b/cars/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Cars - FSAE</title>
+    <title>Blog - Brand</title>
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
@@ -32,7 +32,6 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/" style="color: #e1e1e1;" >JOIN</a></li>
@@ -53,8 +52,40 @@
                         <div class="row">
                             <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/ev-1.jpg"></a></div>
                             <div class="col-lg-7">
+                                <h3>2020-2021 EV</h3>
+                                <p>Columbia University Formula Racing is re-designing our electric vehicle this year. After preparing our EV last year and realizing some design challenges, we decided to make big changes to the chassis, accumulator, and more. We look forward to competing in the EV competition at FSAE North this summer of 2021.</p>
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/trackrender.JPG"></a></div>
+                            <div class="col-lg-7">
+                                <h3>2020-2021 IC</h3>
+                                <p>In addition to our electric vehicle, Columbia University Formula Racing is continuing its legacy of racing IC cars! After over a semester of hard work last year that was unfortunately interrupted, our team is preparing and testing our car to compete in FSAE Michigan. Ware excited for another fun and educational year of building race cars!</p>
+                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-IC';"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
+                <div class="block-heading">
+                    <h2 class="text-dark">Our Past Cars</h2>
+                </div>
+                <div class="block-content">
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/fullassembly1.jpg"></a></div>
+                            <div class="col-lg-7">
+                                <div class="col-lg-7">
                                 <h3>2019-2020 EV</h3>
-                                <p>Columbia University Formula Racing is excited to be introducing our first electric vehicle this year! After over a year of hard work, our team is looking forward to competing in the EV competition at FSAE North this summer of 2020. </p>
+                                <p>75kW Drivetrain</p>
+                                <p>18" 300V, 5.4kWh battery pack</p>
+                                <p>Weight: 465 lbs </p>
+                                <p>Ride height: 1" p>
+                                <p>Center of gravity height: 13"</p>
+                                <p>Track width Front/Rear: 48"/46"</p>
+                                <p>4130 steel space-frame chassis</p>
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
@@ -64,17 +95,16 @@
                             <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/2019-4.jpg"></a></div>
                             <div class="col-lg-7">
                                 <h3>2019-2020 IC</h3>
-                                <p>In addition to our electric vehicle, Columbia University Formula Racing is also continuing its legacy of building ICE cars. We are currently preparing to compete again in FSAE Michigan and are excited for another fun and educational year of building racecars!</p>
+                                <p>Wheel base: 61"</p>
+                                <p>Track width Front/Rear: 48"/46"</p>
+                                <p>Weight: 480 lbs</p>
+                                <p>Ride height: 1"</p>
+                                <p>Center of gravity height: 13"</p>
+                                <p>4130 steel space-frame chassis</p>
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-IC';"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
-                    </div>
-                </div>    
-                <div class="block-heading">
-                    <h2 class="text-dark">Our Past 3 Cars</h2>
-                    
-                </div>
-                <div class="block-content">
+                    </div>                    
                     <div class="clean-blog-post">
                         <div class="row">
                             <div class="col-lg-5"><a href="/cars/2019"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></a></div>
