--- a/cars/index.html
+++ b/cars/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/trackrender.JPG"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-IC"><img class="rounded img-fluid" src="/assets/img/cars/Trackrender.JPG"></a></div>
                             <div class="col-lg-7">
                                 <h3>2020-2021 IC</h3>
                                 <p>In addition to our electric vehicle, Columbia University Formula Racing is continuing its legacy of racing IC cars! After over a semester of hard work last year that was unfortunately interrupted, our team is preparing and testing our car to compete in FSAE Michigan. Ware excited for another fun and educational year of building race cars!</p>
@@ -75,7 +75,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/fullassembly1.jpg"></a></div>
+                            <div class="col-lg-5"><a href="/cars/2020-EV/"><img class="rounded img-fluid" src="/assets/img/cars/fullassembly1.JPG"></a></div>
                             <div class="col-lg-7">
                                 <div class="col-lg-7">
                                 <h3>2019-2020 EV</h3>
@@ -89,6 +89,7 @@
                                 <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
                             </div>
                         </div>
+                    </div>
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
