Remove gallery buttons for 2020-2021 IC, EV

--- a/cars/index.html
+++ b/cars/index.html
@@ -54,7 +54,7 @@
                             <div class="col-lg-7">
                                 <h3>2020-2021 EV</h3>
                                 <p>Columbia University Formula Racing is re-designing our electric vehicle this year. After preparing our EV last year and realizing some design challenges, we decided to make big changes to the chassis, accumulator, and more. We look forward to competing in the EV competition at FSAE North this summer of 2021.</p>
-                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
+                              <!--<button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-EV';"><a class="" href="/cars/2020-EV" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>-->
                             </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                             <div class="col-lg-7">
                                 <h3>2020-2021 IC</h3>
                                 <p>In addition to our electric vehicle, Columbia University Formula Racing is continuing its legacy of racing IC cars! After over a semester of hard work last year that was unfortunately interrupted, our team is preparing and testing our car to compete in FSAE Michigan. Ware excited for another fun and educational year of building race cars!</p>
-                                <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-IC';"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>
+                                <!--<button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = '/cars/2020-IC';"><a class="" href="/cars/2020-IC" style="color: rgba(0,0,0,1);opacity: 1;">Gallery</a></button>-->
                             </div>
                         </div>
                     </div>
