--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
-                    <li class="nav-item dropdown-toggle" role="presentation"> Updates
+                    <div class="dropdown-toggle"> Updates
                         <span class="caret"> </span></button>
                         <ul class="dropdown-menu">
                           <li><a href="#">November 2020</a></li>
                           <li><a href="#">December 2020</a></li>
                           <li><a href="#">January 2021</a></li>
                         </ul>
-                    </li>
+                    </div>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/" style="color: #e1e1e1;">JOIN</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="https://teespring.com/stores/cu-formula-racing" style="color: #e1e1e1;">MERCH</a></li>
