--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
-                    <div class="nav-item dropdown-toggle" style="color: #e1e1e1;"> Updates
-                        <span class="caret"> </span></button>
+                    <div class="dropdown-toggle">
+                        <li class="nav-item" style="color: #e1e1e1;">Updates
+                            <span class="caret"></span></button></li>
                         <ul class="dropdown-menu">
                           <li><a class="nav-link text-light" href="#">November 2020</a></li>
                           <li><a class="nav-link text-light" href="#">December 2020</a></li>
