--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <div class="dropdown-toggle">
-                        <li class="nav-item" role="presentation" style="color: #e1e1e1;">UPDATES
+                        <li class="nav-item" style="color: #e1e1e1;">UPDATES
                             <span class="caret"></span></button></li>
                         <ul class="dropdown-menu">
                           <li><a class="nav-link text-light" href="#">November 2020</a></li>
