--- a/cars/index.html
+++ b/cars/index.html
@@ -48,6 +48,15 @@
                     <h2 class="text-dark">Current Cars</h2>
                     <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our vehicles below.<br></p>
                 </div>
+                  <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+                    <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">November 2020</a></li>
+                      <li><a href="#">December 2020</a></li>
+                      <li><a href="#">January 2021</a></li>
+                    </ul>
+                  </div>
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
