--- a/cars/index.html
+++ b/cars/index.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="container">
                   <div class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Monthly Updates
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                       <li><a href="#">November 2020</a></li>
