--- a/cars/index.html
+++ b/cars/index.html
@@ -50,12 +50,15 @@
                 </div>
                 <div class="container">
                   <div class="dropdown">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Monthly Updates
+                      
+                      <button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" onclick="window.location.href = 'https://forms.gle/QttwUKwaZpTaEPkp7';" data-aos-delay="1000" type="button"><a class="text-white" href="https://forms.gle/QttwUKwaZpTaEPkp7" style="color: rgba(255,255,255,0.8);opacity: 1;">Join us</a></button>
+                      
+                    <button class="btn btn-outline-dark text-light-50 dropdown-toggle" type="button" data-toggle="dropdown">Monthly Updates
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      <li><a href="#">November 2020</a></li>
-                      <li><a href="#">December 2020</a></li>
-                      <li><a href="#">January 2021</a></li>
+                      <li><a class="text-dark" href="#">November 2020</a></li>
+                      <li><a class="text-dark" href="#">December 2020</a></li>
+                      <li><a class="text-dark" href="#">January 2021</a></li>
                     </ul>
                   </div>
                 </div>
