--- a/cars/index.html
+++ b/cars/index.html
@@ -48,7 +48,7 @@
                     <h2 class="text-dark">Current Cars</h2>
                     <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our vehicles below.<br></p>
                 </div>
-                <div class="container">
+                <div class="container" style="padding-bottom:100px;" align="center">
                   <div class="dropdown">
                     <button class="btn btn-outline-dark text-light-50 dropdown-toggle" type="button" data-toggle="dropdown">Monthly Updates
                     <span class="caret"></span></button>
