--- a/cars/index.html
+++ b/cars/index.html
@@ -53,9 +53,11 @@
                     <button class="btn btn-outline-dark text-light-50 dropdown-toggle" type="button" data-toggle="dropdown">Monthly Updates
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu">
-                      <li><a class="text-dark" href="#">November 2020</a></li>
-                      <li><a class="text-dark" href="#">December 2020</a></li>
-                      <li><a class="text-dark" href="#">January 2021</a></li>
+                        
+                      <li><a class="text-dark" href="https://mailchi.mp/f1d07f142b81/monthly-updates">September 2020</a></li>
+                         <li><a class="text-dark" href="https://mailchi.mp/a6a94ec0cbbf/monthly-newsletter-updates-and-more">October 2020</a></li>
+                      <li><a class="text-dark" href="https://mailchi.mp/632e05a66300/monthly-newsletter">November 2020</a></li>
+                     
                     </ul>
                   </div>
                 </div>
