--- a/about-us/index.html
+++ b/about-us/index.html
@@ -264,8 +264,8 @@
                         </div>
                     <div class="col-sm-6 col-lg-4" data-aos="fade">
                         <div style="vertical-align:middle"> 
-                            <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'columbia-fsae.github.io/about-us/constitution2022.pdf';"><a class="" href="columbia-fsae.github.io/about-us/constitution2022.pdf" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
-                            <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'columbia-fsae.github.io/about-us/conduct2022.pdf';"><a class="" href="columbia-fsae.github.io/about-us/conduct2022.pdf" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
+                            <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://columbia-fsae.github.io/about-us/constitution2022.pdf';"><a class="" href="https://columbia-fsae.github.io/about-us/constitution2022.pdf" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
+                            <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://columbia-fsae.github.io/about-us/conduct2022.pdf';"><a class="" href="https://columbia-fsae.github.io/about-us/conduct2022.pdf" style="color: rgba(0,0,0,1);opacity: 1;">Conduct Guidelines</a></button>
                         </div>
                     </div>
                 </div>
