--- a/about-us/index.html
+++ b/about-us/index.html
@@ -151,6 +151,26 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Ben_Felson.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Ben Felson</h4>
+                                <p class="card-text">Vice President of Technical Operations</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Elaine_Kharbanda.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Elaine Kharbanda</h4>
+                                <p class="card-text">Vice President of Business Affairs</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calee_Schmidtberger.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Calee Schmidtberger</h4>
@@ -166,73 +186,61 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jannie_Zhong.jpeg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Jannie Zhong</h4>
-                                <p class="card-text">VP, Internal Affairs</p>
-                            </div>
-                        </div>
-                    </div> 
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
-                            <div class="card-body info">
-                                <h4 class="card-title">Elaine Kharbanda</h4>
-                                <p class="card-text">VP, External Affairs</p>
-                            </div>
-                        </div>
-                    </div> 
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Katherine_OReilly.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Katherine O’Reilly</h4>
-                                <p class="card-text">Assistant Chief, Dynamics</p>
+                                <p class="card-text">Dynamics Chief</p>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
+
+
+
+
+
+
+
+
+
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Groll-min.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Matthew Groll</h4>
-                                <p class="card-text">Assistant Chief, Fluids</p>
+                                <p class="card-text">Fluids Chief</p>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Simon_Weisberg.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Simon Weisberg</h4>
-                                <p class="card-text">Assistant Chief, Controls</p>
+                                <p class="card-text">Controls Chief</p>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rano_Stouraiti.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Ourania Stouraiti</h4>
-                                <p class="card-text">Assistant Chief, High Voltage</p>
+                                <h4 class="card-title">Rano Stouraiti</h4>
+                                <p class="card-text">High Voltage Chief</p>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Saul_Partida-min.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Saul Partida</h4>
-                                <p class="card-text">Assistant Chief, Low Voltage</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
-                            <div class="card-body info">
-                                <h4 class="card-title">Jillian Busetto</h4>
-                                <p class="card-text">Secretary</p>
+                                <p class="card-text">Low Voltage Chief</p>
                             </div>
                         </div>
                     </div>
@@ -240,28 +248,40 @@
                         <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Ryan_Wu.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Ryan Wu</h4>
-                                <p class="card-text">MechE Treasurer</p>
+                                <p class="card-text">Mechanical Engineering Treasurer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Winston_Zhang.jpg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Winston Zhang</h4>
+                                <p class="card-text">Electrical Engineering Treasurer</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
+                    
+                    
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jillian_Busetto.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Winston Zhang</h4>
-                                <p class="card-text">EE Treasurer</p>
+                                <h4 class="card-title">Jillian Busetto</h4>
+                                <p class="card-text">Secretary</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-lg-4" data-aos="fade">
-                            <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
-                                <div class="card-body info">
-                                    <h4 class="card-title">Ben Felson</h4>
-                                    <p class="card-text">Social Chair</p>
-                                </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Alex Deli-Ivanov</h4>
+                                <p class="card-text">Social Chair</p>
                             </div>
                         </div>
+                    </div>
                     <div class="col-sm-6 col-lg-4" data-aos="fade">
                         <div style="vertical-align:middle"> 
                             <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://columbia-fsae.github.io/about-us/constitution2022.pdf';"><a class="" href="https://columbia-fsae.github.io/about-us/constitution2022.pdf" style="color: rgba(0,0,0,1);opacity: 1;">Our Constitution</a></button>
