--- a/about-us/index.html
+++ b/about-us/index.html
@@ -267,7 +267,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jillian_Busetto.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jillian_Busetto.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Jillian Busetto</h4>
                                 <p class="card-text">Secretary</p>
