--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - FSAE</title>
+    <title>Home - CUFR</title>
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(assets/img/beautiful-color-ui-gradients-backgrounds-royal.png);opacity: 1;background-size: cover;background-position: center;">
         <div class="container">
             <img src="/assets/img/fsae-logo-white.svg" width="40" height="100%">
-            <a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(255,255,255);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University FSAE</a><button data-toggle="collapse"
+            <a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(255,255,255);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University Formula Racing</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -49,8 +49,8 @@
     <main class="page landing-page">
           <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/bg02.jpg&quot;);color: rgba(0,0,0,0.76);width: 100%;margin-top: -1%;">
              <div class="text" style="margin: 0px;margin-top: 0%;"><img data-aos="fade-up" data-aos-duration="1000" src="assets/img/fsae-logo-white.svg" style="width: 154px;">
-                 <h2 data-aos="fade-up" data-aos-duration="1000" style="font-family: 'Fjalla One', sans-serif;margin-top: 7px;">Columbia University Formula Racing</h2><button class="btn btn-outline-light text-black-50" data-aos="fade-up" data-aos-duration="1000" onclick="window.location.href = 'https://www.notion.so/columbiafsae/Join-the-team-1617231f854b48638d8e6dcdf1838128';" data-aos-delay="1000" type="button"><a class="text-white" href="https://www.notion.so/columbiafsae/Join-the-team-1617231f854b48638d8e6dcdf1838128" style="color: rgba(255,255,255,0.8);opacity: 1;">Join us</a></button>
-              </div>
+                 <h2 data-aos="fade-up" data-aos-duration="1000" style="font-family: 'Fjalla One', sans-serif;margin-top: 7px;">Columbia University Formula Racing</h2>
+             </div>
              
                   </section>
         </section>
@@ -85,7 +85,7 @@
         </a></div>
     
         <div class="footer-copyright">
-            <p>© 2020 Copyright Columbia University FSAE</p>
+            <p>© 2020 Copyright Columbia University Formula Racing </p>
         </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
