--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - CUFR</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -27,7 +27,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(assets/img/beautiful-color-ui-gradients-backgrounds-royal.png);opacity: 1;background-size: cover;background-position: center;">
         <div class="container">
-            <img src="/assets/img/fsae-logo-white.svg" width="40" height="100%">
+            <img src="/assets/img/fsae-logo-white-22.png" width="40" height="100%">
             <a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(255,255,255);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University Formula Racing</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
@@ -48,7 +48,7 @@
    
     <main class="page landing-page">
           <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/bg02.jpg&quot;);color: rgba(0,0,0,0.76);width: 100%;margin-top: -1%;">
-             <div class="text" style="margin: 0px;margin-top: 0%;"><img data-aos="fade-up" data-aos-duration="1000" src="assets/img/fsae-logo-white-22.svg" style="width: 154px;">
+             <div class="text" style="margin: 0px;margin-top: 0%;"><img data-aos="fade-up" data-aos-duration="1000" src="assets/img/fsae-logo-white-22.png" style="width: 154px;">
                  <h2 data-aos="fade-up" data-aos-duration="1000" style="font-family: 'Fjalla One', sans-serif;margin-top: 7px;">Columbia University Formula Racing</h2>
              </div>
              
