--- a/cars/index.html
+++ b/cars/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>CUFR - Cars</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <title>Cars - CUFR</title>
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
@@ -175,7 +175,7 @@
         <i class="fa fa-twitter social-link-icon"></i></a>
         </a></div>
         <div class="footer-copyright">
-            <p>© 2019 Copyright Columbia University FSAE</p>
+            <p>© 2022 Copyright Columbia University FSAE</p>
         </div>
     </footer>
     <script src="/assets/js/jquery.min.js"></script>
