--- a/about-us/index.html
+++ b/about-us/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;/assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
-        <div class="container"><img src="/assets/img/fsae-logo-white.svg" width="40" height="100%"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(255,255,255);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University FSAE</a><button data-toggle="collapse"
+        <div class="container"><img src="/assets/img/fsae-logo-white-22.png" width="40" height="100%"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(255,255,255);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia University Formula Racing</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Winston_Zhang.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Vedhas_Banaji.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Vedhas Banaji</h4>
                                 <p class="card-text">Electrical Engineering Treasurer</p>
@@ -357,7 +357,7 @@ posObjs();</script>
         <i class="fa fa-twitter social-link-icon"></i></a>
         </a></div>
         <div class="footer-copyright">
-            <p>© 2020 Copyright Columbia University FSAE</p>
+            <p>© 2022 Copyright Columbia University FSAE</p>
         </div>
     </footer>
     <script src="/assets/js/jquery.min.js"></script>
