--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -50,7 +50,7 @@
                     <h2 class="text-dark" style="color: rgb(43,48,51);">Sponsors</h2>
                     <p>The Columbia University Formula Racing team sincerely thanks our sponsors' generous support! Our sponsors make our success possible.</p>
                     <br></br>
-                    <p>If you are interested in becoming a CUFR sponsor, please contact our team at <b>columbiafsae@gmail.com.</b></p>
+                    <p>If you are interested in becoming a CUFR sponsor, please contact our team at <b>fsae@columbia.edu.</b></p>
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" data-aos-delay="500">
                     <div class="col-md-6 col-lg-4 item" style="display: grid; align-items: center; justify-content: center;"><a class="lightbox" href="https://me.columbia.edu"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/CU_MechE.jpg" style="background-color: rgba(255,255,255,0); background-size: auto;background-position: center;"></a></div>
