Add calendar to join page

--- a/join/index.html
+++ b/join/index.html
@@ -54,7 +54,7 @@
                     <p>- Turn right, away from the elevator</p>
                     <p style="padding-bottom: 26px;">- Pass through the first set of double doors and turn right again; head to the end of the hallway</p>
 		    <button class="btn btn-outline-dark text-black-50" style="margin-top: 30px" type="button" onclick="window.location.href = 'https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members';"><a class="" href="https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members" style="color: rgba(0,0,0,1);opacity: 1;">New Member instructions</a></button>
-                            
+                    <iframe src="https://calendar.google.com/calendar/embed?src=columbiafsae%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>       
 		
                 </div>
                 
